ext/wrc.css
@import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');

.navbar.navbar-1 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger6.svg?color=000');
}
.navbar.navbar-2 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger2.svg?color=fff');
  }
  .navbar.navbar-3 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=6a1b9a');
  }
  .navbar.navbar-4 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger7.svg?color=BFE100');
  }
  .navbar.navbar-5 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger5.svg?color=f3e5f5');
  }
  .navbar.navbar-6 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger8.svg?color=E3005C');
  }
  .navbar.navbar-7 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger9.svg?color=FF2C00');
  }
  .navbar.navbar-8 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger4.svg?color=1729B0');
  }
  .navbar.navbar-9 .navbar-toggler-icon {
  background-image: url('https://mdbootstrap.com/img/svg/hamburger3.svg?color=00FBD8');
  }
  
html, body {
  overflow-x: hidden; 
}
button.navbar-toggler {
  border: none; 
  outline: none; 
}

.navbar {
  font-family: "Lexend Deca", sans-serif; 
  background: #222;
  box-shadow: 3px 5px 10px -2px rgba(37, 37, 37, 0.26);
}

.navbar .navbar-nav .nav-link,
.navbar .navbar-brand {
  color: #FFFFFF; 
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-brand:hover {
  color: #00C086; 
  opacity: 0.8;
  transition: 0.5s;
}

.navbar-brand {
  font-family: "Lexend Deca", sans-serif; 
}

.wrc-information {
  margin-top: 0;
  text-align: center;
}

.navbar .nav-link {
  font-size: 16px; 
}

.landing {
  height: 95vh; 
  width: 100%; 
  background: linear-gradient(rgba(4, 119, 191, 0.7), rgba(18, 70, 115, 0.5)  ), url(../img/seattle06.jpg);
  /* background by SVGBackgrounds.com */
  background-size: cover; 
  background-repeat: no-repeat;
  position: relative; 
  display: table;
  padding-top: 5%; 
}

.landing .website-link {
  color: #ffffff;
  text-decoration: none; 
}

.title .row .col-md-6 {
  margin: auto; 
}

.title {
  display: table-cell;
  text-align: left;
  vertical-align: middle;
  color: #FFFFFF;
  padding: 2.5%; 
  margin: auto; 
}

.title h1 {
  margin-bottom: 5%;
  font-family: "Lexend Deca", sans-serif; 
  border: solid 6px #FFFFFF; 
  padding: 0.25em; 
  font-size: 5rem; 
  text-align: center;
}

/* Place text in the middle of the image */
.caption-center {
  text-align: center; 
  position: absolute;
  top: 20%;
  left: 5%; 
  color: #FFFFFF;
}

.caption-center h1 {
  text-align: center;
  font-family: "Lexend Deca", sans-serif; 
  font-size: 5rem; 
  /* text-shadow: 2px 2px 10px #f01ad3; */
}

.thin-text {
  font-weight: 300; 
  line-height: 1.2; 
  font-size: 1.2rem; 
}

.location-date {
  margin-top: 5%; 
}

section {
  padding: 5% 7.5%; 
  text-align: center; 
  color: #17252A;
}

.section-title h2 {
  margin-bottom: 1%; 
}

.section-title {
  margin-bottom: 4%; 
}

#wrc-about { 
  color: #222;
}

#wrc-welcome p {
  text-align: left;
}

#wrc-welcome img {
  width: 250px;
  height: 250px;
}

#wrc-welcome .row {
  margin: 2.5% auto;
}

#wrc-welcome .col-md-4 img {
  margin: 5% auto; 
}

#wrc-committees, 
#wrc-transportation {
  background-color: #124673; 
  color: #FFFFFF; 
}

#wrc-fields,
#wrc-speakers,
#wrc-events,
#wrc-chapters {
  background: linear-gradient(to bottom right, rgba(4, 119, 191, 0.6), rgba(0, 192, 134, 0.8) ), url(../img/backgrounds/Large-Triangles.svg);
  /* background by SVGBackgrounds.com */
  background-size: cover; 
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;  
  display: block; 
  color: #FFFFFF;
}

#wrc-transportation .row .col-md-6 {
  margin-top: 5%;
}

#wrc-speakers h3 {
  font-style: italic;
}

#wrc-speakers .row .col-md-6 {
  text-align: center;
}

#wrc-speakers img {
  width: 60%;
}

#wrc-chapters .list-group {
  color: black; 
}

#wrc-program,
#wrc-about {
  background-color: #FFFFFF; 
}

#wrc-program {
  text-align: left;
}

#wrc-speakers hr {
  border-top-color: #FFFFFF; 
}

#wrc-chapters > ul {
  text-align: left; 
}

#wrc-about p {
  text-align: start; 
  font-size: 0.9rem; 
  margin-left: 12%; 
  margin-right: 12%; 
}

#wrc-about .about-headers {
  margin-bottom: 2.5%; 
}

#wrc-committees .row .col>h5 {
  margin: 3% auto; 
}

#wrc-committees .row {
  margin-top: 5%; 
}

#wrc-committees .row-title,
.section-title {
  margin: 0; 
}

#wrc-events .row > .col-md-6 {
  margin: 5% auto; 
}

#wrc-fields .img-text-pair,
#wrc-speakers .img-text-pair {
  margin: 5% auto; 
  text-align: left;
}

#wrc-speakers .col-md-6 h2{
  margin-top: 15%;
}

.section-title hr {
  width: 2%; 
  height: 0.25px; 
}

.hr-light {
  border-top: solid 5px #FEFFFF;
}

.hr-dark {
  border-top: solid 5px #222;
}

footer {
  background: #222; 
  display: block;
  color: white; 
}

footer a {
  color: #ffffff;
}

footer a:hover {
  color: #cacaca;
  cursor: pointer;
  text-decoration: none; 
  opacity: 0.8;
  transition: 0.3s;
}

footer hr {
  border-top: solid 5px #ffffff;
  width: 4%; 
  height: 0.5px; 
}

.contact-people .col-md-2 {
  margin: auto 3%; 
  text-align: center; 
} 

.sponsor-images {
  justify-content: center; 
}

.sponsor-images img {
  width: 300px; 
  margin: auto; 
}

#wrc-sponsors .sponsor-images .row .col-md-6 {
  text-align: center; 
  margin: auto; 
}

.sponsor-item {
  margin: auto; 
}

.social-icon {
  width: 50%; 
  margin: auto; 
}

#wrc-events .carousel-item {
  -webkit-mask-image:-webkit-linear-gradient(linear, left top, left bottom, (rgba(0,0,0,1)), (rgba(0,0,0,0)));
  mask-image: linear-gradient(bottom, rgba(0,0,0,0), rgba(0,0,0,0.5))
}

.carousel-caption {
  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)); 
}

@media(min-width:769px) and (max-width:1280px) {

  section {
    padding-left: 0;
    padding-right: 0; 
    margin: 0; 
  }

  .title {
    text-align: center;
    width: 100%;
  }

  .title h1 {
    font-size: 3rem; 
  }

  .title h5 {
    font-size: 0.9rem; 
  }
}

@media(max-width:768px) {

  /* Adding padding for landing because of fixed navbar cutting off landing page on iphone 5 */
  .landing {
    padding-top: 30%; 
  }

  .landing .website-link {
    font-size: 0.8rem; 
  }
  
  #wrc-about iframe {
    width: 300px;
    height: 300px; 
  }

  #wrc-fields h2 {
    font-size: 2rem; 
  }

  #wrc-fields {
    text-align: center; 
  }
  
  .title {
    text-align: center;
  }
  
  .title h1 {
    font-size: 1.5rem; 
  }

  .title h5, .title p {
    text-align: center;
    font-size: 0.8rem; 
  }

  .caption-center {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    width: 75%; 
    transform: translate(-50%, -50%);
    color: white;
  }

  .caption-center h1 {
    font-size: 2rem; 
  }

  .caption-center h5 {
    text-align: center; 
    font-size: 0.8rem; 
  }

  section h2 {
    font-size: 1.5rem; 
    margin-bottom: 4%; 
  }

  .section-title {
    margin-bottom: 8%; 
  }

  section {
    padding: 20% 0; 
  }

  .container-fluid {
    padding: auto 0; 
  }

  section .row {
    margin: auto; 
  }

  p {
    font-size: 2.75vh; 
  }

  .thin-text {
    line-height: 1.2; 
  }

  .contact-person {
    margin: 40px auto; 
    font-size: 0.8rem; 
  }

  .contact-person h5 {
    font-size: 0.8rem; 
  }

  #wrc-speakers .img-text-pair h2, 
  #wrc-speakers .img-text-pair h3 {
    text-align: center;
    font-size: 2.5rem;
  }

  #wrc-speakers .row .col-md-6 {
    margin-top: 2%;
  }

  #wrc-speakers .row .col-md-6 img {
    width: 100%;
  }

  #wrc-contact {
    color: white; 
  }

  .sponsor-images .row img {
    max-width: 200px; 
  }

  .sponsor-images .row h4 {
    font-size: 1rem; 
  }
 
  #wrc-sponsors .sponsor-images .row {
    text-align: center; 
    margin: 20% auto; 
  }

  #wrc-about .description {
    text-align: start; 
  }
  #wrc-about .description h5 {
    font-size: 2.75vh;
  }

  #wrc-about p {
    margin: auto; 
  }

  .section-title hr,
  footer hr {
    width: 10%; 
  }

}

